--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 </head>
 <body>
     <h1>Etch A Sketch</h1>
-    <button id="newSize">Change Size</button>
-    <button id="clear">Clear</button>
-    <div id="info"></div>
-
-    <div id="container"></div>
+    <div id="outerContainer">
+        <div id="rightSide">
+            <form action="script.js" method="GET" id="form" autocomplete="off">
+                <input type="text" id="input" name="input" form="form" placeholder="30">
+                <input type="submit" form="form" id="submitBtn" value="Change Size">
+            </form>
+            <button id="clear">Clear</button>
+            <div id="info"></div>
+        </div>
+        <div id="container"></div>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
